--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
     %sveltekit.head%
   </head>
   <body itemscope itemtype="https://schema.org/WebPage" data-sveltekit-prefetch>
+    <script src="https://openpanel.dev/op1.js" defer async></script>
     <script>
       const themeLocalStorageKey = 'theme';
       if (
@@ -15,6 +16,15 @@
       } else {
         document.body.classList.add('light');
       }
+
+    window.op = window.op||function(...args){(window.op.q=window.op.q||[]).push(args);};
+    window.op('init', {
+      clientId: '78e9a86b-99dd-4875-b7d8-d4f223335a33',
+      trackScreenViews: true,
+      trackOutgoingLinks: true,
+      trackAttributes: true,
+    });
+
     </script>
     <div style="display: contents">%sveltekit.body%</div>
   </body>
